Adicionado potência de 2 e o botão de limpar tela

--- a/Calculadora/nbproject/project.properties
+++ b/Calculadora/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Calculadora.jar
+dist.jar=${dist.dir}/CalculadoraBasica.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Calculadora
+dist.jlink.output=${dist.jlink.dir}/CalculadoraBasica
 excludes=
 file.reference.flatlaf-3.0.jar=C:\\Users\\gabri\\Documents\\Libraries Java\\flatlaf-3.0.jar
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Calculadora
+jlink.launcher.name=CalculadoraBasica
 main.class=Interface.Calculadora
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
